# CFM_service

./: .env_sampe_docker  Dockerfile  README.md  docker-compose.yml  pyproject.toml
cfms/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
cfms/fixtures/: initial_data.json
cfms/management/commands/: load_initial_data.py
cfms/migrations/: 0001_initial.py  0002_category_type_alter_category_name_and_more.py  0003_alter_status_name_alter_subcategory_name_and_more.py
cfms/templates/cfms/: base.html  cashflow_confirm_delete.html  cashflow_form.html  cashflow_list.html  directory_manage.html
config/: settings.py  urls.py
