[tool.poetry]
name = "cfm-service"
version = "0.1.0"
description = ""
authors = ["kirill_barkhatov <k.s.barkhatov@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.2.1"
djangorestframework = "^3.16.0"
psycopg2-binary = "^2.9.10"
python-dotenv = "^1.1.0"
drf-yasg = "^1.21.10"
django-cors-headers = "^4.7.0"
gunicorn = "^23.0.0"


[tool.poetry.group.lint.dependencies]
flake8 = "^7.2.0"
isort = "^6.0.1"
black = "^25.1.0"
mypy = "^1.16.0"


[tool.poetry.group.dev.dependencies]
coverage = "^7.8.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.mypy]
disallow_untyped_defs = true
no_implicit_optional = true
warn_return_any = true
exclude = 'venv'
plugins = ["mypy_django_plugin.main"]

[tool.black]
line-length = 119
exclude = '''
(
  /(
      \.eggs         # Исключить несколько общих каталогов
    | \.git          # в корне проекта
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | dist
  )/
)
'''

[tool.isort]
line_length = 119
